--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body class="bg-white text-black flex justify-center min-h-screen font-[300]">
-  <section class="flex flex-col items-start md:flex-row md:w-[1200px] md:gap-5 py-5">
-    <aside class="md:w-1/4 md:order-1 p-5 border border-border rounded md:sticky md:top-10">
+  <section class="flex flex-col items-start md:flex-row p-5 md:px-0 md:w-[1200px] md:gap-5">
+    <aside class="w-full md:w-1/4 md:order-1 p-5 border border-border rounded md:sticky md:top-5">
       <h2 class="font-[500] text-black text-sm">Navigation</h2>
       <ul class="mt-3 text-primary">
         <li class="flex mb-2 py-2 border-b border-border hover:border-primary hover:font-[400]">
@@ -59,7 +59,7 @@
                 August, 2023 - Present
               </h4>
             </div>
-            <div class="flex gap-2 mt-3">
+            <div class="flex flex-wrap gap-2 mt-3">
               <div
                 class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-[5px] transition-colors ease-in-out">
                 <svg class="w-[14px]" fill="currentColor" viewBox="0 0 24 24" role="img"
@@ -156,7 +156,7 @@
                 Febuary, 2022 - June, 2023
               </h4>
             </div>
-            <div class="flex gap-2 mt-3">
+            <div class="flex flex-wrap gap-2 mt-3">
 
               <div
                 class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-[5px] transition-colors ease-in-out">
@@ -230,7 +230,7 @@
                 September, 2022 - January, 2023
               </h4>
             </div>
-            <div class="flex gap-2 mt-3">
+            <div class="flex flex-wrap gap-2 mt-3">
               <div
                 class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-[5px] transition-colors ease-in-out">
                 <svg class="w-[14px]" fill="currentColor" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
@@ -259,7 +259,7 @@
                 June, 2020 - September, 2021
               </h4>
             </div>
-            <div class="flex gap-2 mt-3">
+            <div class="flex flex-wrap gap-2 mt-3">
               <div
                 class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-[5px] transition-colors ease-in-out">
                 <svg class="w-[14px]" fill="currentColor" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
@@ -300,7 +300,7 @@
                 June, 2020 - December, 2020
               </h4>
             </div>
-            <div class="flex gap-2 mt-3">
+            <div class="flex flex-wrap gap-2 mt-3">
               <div
                 class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-[5px] transition-colors ease-in-out">
                 <svg fill="currentColor" class="w-[18px]" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
@@ -349,6 +349,9 @@
 
       <div class="mt-10">
         <h2 class="font-[500] text-black text-sm">Projects</h2>
+        <div class="">
+
+        </div>
       </div>
 
     </main>
