--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         </p>
       </div>
 
-      <div class="mt-10 relative overflow-hidden">
+      <div class="mt-10 relative">
         <h2 class="font-[500] text-black text-sm">Projects</h2>
-        <div class="flex overflow-y-hidden overflow-x-auto gap-5 py-5 pr-14 relative">
+        <div class="w-full flex flex-col md:flex-row overflow-y-hidden overflow-x-auto gap-5 py-5 md:pr-14 relative">
           <div
-            class="flex-shrink-0 w-[250px] border border-border p-3 rounded group cursor-default flex flex-col items-start justify-between">
+            class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default flex flex-col items-start justify-between">
             <div>
               <img src="./public/orunla-page-screenshot.png"
                 class="w-full h-auto rounded grayscale group-hover:grayscale-0 transition-all ease-in-out" />
@@ -66,7 +66,7 @@
           </div>
           
           <div
-            class="flex-shrink-0 w-[250px] border border-border p-3 rounded group cursor-default flex flex-col items-start justify-between">
+            class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default flex flex-col items-start justify-between">
             <div>
               <img src="./public/fufumaps-page-screenshot.png"
                 class="w-full h-auto rounded grayscale group-hover:grayscale-0 transition-all ease-in-out" />
@@ -84,7 +84,7 @@
           </div>
 
           <div
-            class="flex-shrink-0 w-[250px] border border-border p-3 rounded group cursor-default  flex flex-col items-start justify-between">
+            class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default  flex flex-col items-start justify-between">
             <div>
               <img src="./public/photosplash-page-screenshot.png"
                 class="w-full h-auto rounded grayscale group-hover:grayscale-0 transition-all ease-in-out" />
@@ -102,7 +102,7 @@
           </div>
 
           <div
-            class="flex-shrink-0 w-[250px] border border-border p-3 rounded group cursor-default  flex flex-col items-start justify-between">
+            class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default  flex flex-col items-start justify-between">
             <div>
               <img src="./public/spottang-page-screenshot.png"
                 class="w-full h-auto rounded grayscale group-hover:grayscale-0 transition-all ease-in-out" />
@@ -119,7 +119,7 @@
             </a>
           </div>
         </div>
-        <div class="absolute top-10 right-0 px-10 py-[155px] bg-gradient-to-l from-white to-transparent" />
+        <div class="hidden md:block absolute top-10 right-0 px-10 py-[155px] bg-gradient-to-l from-white to-transparent"></div>
       </div>
 
       <div class="mt-10">
