--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="bg-white text-black flex justify-center min-h-screen font-[300]">
-  <section class="flex flex-col items-start md:flex-row p-5 md:px-0 md:w-[1200px] md:gap-5">
+  <section class="flex flex-col items-start md:flex-row p-5 md:px-0 md:w-[1200px] gap-5">
     <aside class="w-full md:w-1/4 md:order-1 p-5 border border-border rounded md:sticky md:top-2">
       <h2 class="font-[500] text-black text-sm">Navigation</h2>
       <ul class="mt-3 text-primary">
@@ -28,7 +28,7 @@
       </ul>
     </aside>
     <main class="md:w-3/4">
-      <header class="text-4xl p-5 font-[200] border border-border rounded sticky top-2 bg-white z-10">
+      <header class="text-xl md:text-4xl p-5 font-[200] border border-border rounded sticky top-2 bg-white z-10">
         Boluwatife Johnson
       </header>
 
