--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <section class="flex flex-col items-start md:flex-row p-5 md:px-0 md:w-[1200px] gap-5">
     <aside class="w-full md:w-1/4 md:order-1 p-5 border border-border rounded md:sticky md:top-2">
       <h2 class="font-[500] text-black text-sm">Navigation</h2>
-      <ul class="mt-3 text-primary">
+      <ul class="my-3 text-primary">
         <li class="flex mb-2 py-2 border-b border-border hover:border-primary hover:font-[400]">
           <a href="#about-me" class="w-full">About Me</a>
         </li>
@@ -26,6 +26,68 @@
           <a href="#education" class="w-full">Education</a>
         </li>
       </ul>
+      <div class="mt-5 flex items-center gap-5">
+        <a href="//github.com/booluw" target="_blank" class="inline text-black hover:text-primary">
+          <svg fill="currentColor" class="w-[24px]" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+            <g id="SVGRepo_iconCarrier">
+              <path
+                d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12">
+              </path>
+            </g>
+          </svg>
+        </a>
+
+        <a href="//github.com/booluw" target="_blank" class="inline text-black hover:text-primary">
+          <svg fill="currentColor" class="w-[24px]" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+            <g id="SVGRepo_iconCarrier">
+              <path
+                d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z">
+              </path>
+            </g>
+          </svg>
+        </a>
+
+        <a href="mailto:boluwatife.j.johnson@gmail.com" target="_blank" class="inline text-black hover:text-primary">
+          <svg class="w-[32px]" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+            <g id="SVGRepo_iconCarrier">
+              <g id="style=linear">
+                <g id="email">
+                  <path id="vector"
+                    d="M17 20.5H7C4 20.5 2 19 2 15.5V8.5C2 5 4 3.5 7 3.5H17C20 3.5 22 5 22 8.5V15.5C22 19 20 20.5 17 20.5Z"
+                    stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round">
+                  </path>
+                  <path id="vector_2"
+                    d="M18.7698 7.7688L13.2228 12.0551C12.5025 12.6116 11.4973 12.6116 10.777 12.0551L5.22998 7.7688"
+                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round"></path>
+                </g>
+              </g>
+            </g>
+          </svg>
+        </a>
+
+        <a
+          href="https://docs.google.com/document/d/1QwcjFuw6chztKCYIqZjjGfrNDJVNcfEsEfi9V0eySUM/edit?usp=sharing"
+          target="_blank"
+          class="flex gap-2 bg-primary text-white hover:bg-black text-sm py-2 px-3 rounded-sm font-[500] transition-colors ease-in-out"
+        >
+          <svg fill="currentColor" class="w-[20px]" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+            <g id="SVGRepo_iconCarrier">
+              <path
+                d="M23.004 1.5q.41 0 .703.293t.293.703v19.008q0 .41-.293.703t-.703.293H6.996q-.41 0-.703-.293T6 21.504V18H.996q-.41 0-.703-.293T0 17.004V6.996q0-.41.293-.703T.996 6H6V2.496q0-.41.293-.703t.703-.293zM6.035 11.203l1.442 4.735h1.64l1.57-7.876H9.036l-.937 4.653-1.325-4.5H5.38l-1.406 4.523-.938-4.675H1.312l1.57 7.874h1.641zM22.5 21v-3h-15v3zm0-4.5v-3.75H12v3.75zm0-5.25V7.5H12v3.75zm0-5.25V3h-15v3Z">
+              </path>
+            </g>
+          </svg>
+          Resume
+        </a>
+      </div>
     </aside>
     <main class="md:w-3/4">
       <header class="text-xl md:text-4xl p-5 font-[200] border border-border rounded sticky top-2 bg-white z-10">
@@ -292,142 +354,6 @@
                     d="M48.79,286.09H80.44a93.39,93.39,0,0,0,25.62-3.21l8.18-25.19,22.88-70.39a55.75,55.75,0,0,0-6-7.82Q113.54,160,79.59,160H0V352H48.79Zm41.9-81.92q6.89,6.92,6.88,18.52t-6,18.53q-6.64,7.62-24.44,7.61H48.79V197.25H67.21q16.59,0,23.48,6.92ZM376.85,317.61l14.79-37.25h42.69l-20.26-56.51L439.41,160,512,352H458.47l-12.4-34.39Z" />
                 </svg>
                 PWA
-              </div>
-            </div>
-          </div>
-
-          <div class="border-b border-border py-2">
-            <div>
-              <h3 class="font-[500]">Trusoft Limited</h3>
-              <div class="text-sm flex gap-3">
-                <h4 class="border-r border-border pr-3">
-                  Frontend Developer
-                </h4>
-                <h4 class="">Contract</h4>
-              </div>
-              <h4 class="text-sm opacity-85">
-                September, 2022 - January, 2023
-              </h4>
-            </div>
-            <div class="flex flex-wrap gap-2 mt-3">
-              <div
-                class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-sm transition-colors ease-in-out">
-                <svg class="w-[14px]" fill="currentColor" viewBox="0 0 24 24" role="img"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                  <g id="SVGRepo_iconCarrier">
-                    <path
-                      d="M24,1.61H14.06L12,5.16,9.94,1.61H0L12,22.39ZM12,14.08,5.16,2.23H9.59L12,6.41l2.41-4.18h4.43Z">
-                    </path>
-                  </g>
-                </svg>
-                Vue
-              </div>
-            </div>
-          </div>
-
-          <div class="border-b border-border py-2">
-            <div>
-              <h3 class="font-[500]">Raaxo Synergy</h3>
-              <div class="text-sm flex gap-3">
-                <h4 class="border-r border-border pr-3">
-                  Frontend Developer
-                </h4>
-                <h4 class="">Contract</h4>
-              </div>
-              <h4 class="text-sm opacity-85">
-                June, 2020 - September, 2021
-              </h4>
-            </div>
-            <div class="flex flex-wrap gap-2 mt-3">
-              <div
-                class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-sm transition-colors ease-in-out">
-                <svg class="w-[14px]" fill="currentColor" viewBox="0 0 24 24" role="img"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                  <g id="SVGRepo_iconCarrier">
-                    <path
-                      d="M24,1.61H14.06L12,5.16,9.94,1.61H0L12,22.39ZM12,14.08,5.16,2.23H9.59L12,6.41l2.41-4.18h4.43Z">
-                    </path>
-                  </g>
-                </svg>
-                Vue
-              </div>
-
-              <div
-                class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-sm transition-colors ease-in-out">
-                <svg fill="currentColor" class="w-[16px]" viewBox="0 0 24 24" role="img"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                  <g id="SVGRepo_iconCarrier">
-                    <path d="M7.094 0L12 11.596 16.906 0H7.094zM1.5 3.5L12 24 22.5 3.5H17L12 15 7 3.5z"></path>
-                  </g>
-                </svg>
-                Vuetify
-              </div>
-            </div>
-          </div>
-
-          <div class="border-b border-border py-2">
-            <div>
-              <h3 class="font-[500]">STAMS Group</h3>
-              <div class="text-sm flex gap-3">
-                <h4 class="border-r border-border pr-3">
-                  Frontend Instructor
-                </h4>
-                <h4 class="">Contract</h4>
-              </div>
-              <h4 class="text-sm opacity-85">
-                June, 2020 - December, 2020
-              </h4>
-            </div>
-            <div class="flex flex-wrap gap-2 mt-3">
-              <div
-                class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-sm transition-colors ease-in-out">
-                <svg fill="currentColor" class="w-[18px]" viewBox="0 0 24 24" role="img"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                  <g id="SVGRepo_iconCarrier">
-                    <path
-                      d="M1.5 0h21l-1.91 21.563L11.977 24l-8.564-2.438L1.5 0zm7.031 9.75l-.232-2.718 10.059.003.23-2.622L5.412 4.41l.698 8.01h9.126l-.326 3.426-2.91.804-2.955-.81-.188-2.11H6.248l.33 4.171L12 19.351l5.379-1.443.744-8.157H8.531z">
-                    </path>
-                  </g>
-                </svg>
-                HTML 5
-              </div>
-
-              <div
-                class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-sm transition-colors ease-in-out">
-                <svg fill="currentColor" class="w-[18px]" viewBox="0 0 24 24" role="img"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                  <g id="SVGRepo_iconCarrier">
-                    <path
-                      d="M.03 16.428V1.118C.03.5.53 0 1.147 0H22.8c.624 0 1.12.5 1.12 1.12v14.76c-.67-.41-1.46-.616-2.357-.616-1.254 0-2.205.3-2.854.896-.65.598-.97 1.328-.97 2.225 0 .97.33 1.69 1 2.15.39.285 1.11.54 2.14.762l1.05.24c.63.133 1.07.3 1.36.46.28.183.43.437.43.765 0 .566-.29.955-.87 1.148l-.03.016h-2.21c-.287-.104-.51-.254-.69-.45-.18-.224-.3-.55-.36-1.013h-1.98c0 .566.103 1.045.33 1.48h-1.68c.19-.39.3-.823.3-1.317 0-.88-.3-1.55-.886-2.016-.374-.297-.94-.535-1.688-.717l-1.72-.402c-.66-.14-1.09-.28-1.3-.4-.31-.18-.46-.45-.46-.79 0-.38.16-.68.47-.89.33-.21.75-.31 1.29-.31.49 0 .88.09 1.21.26.494.256.75.69.79 1.287h2c-.03-1.046-.415-1.853-1.15-2.404-.744-.55-1.625-.835-2.67-.835-1.255 0-2.195.3-2.853.88-.64.583-.97 1.33-.97 2.21 0 .97.33 1.688 1 2.15.402.27 1.12.523 2.15.76l1.045.24c.61.135 1.06.285 1.36.465.28.18.43.43.43.76 0 .57-.3.94-.88 1.15h-2.24c-.284-.106-.52-.256-.69-.465-.18-.22-.31-.564-.37-1.014H8.38c0 .558.105 1.05.32 1.48H6.61c.33-.52.553-1.12.663-1.79H5.22c-.14.51-.312.898-.525 1.15-.26.33-.6.54-1.02.645H2.448c-.45-.105-.837-.358-1.15-.76-.464-.558-.688-1.394-.688-2.5 0-1.12.23-1.97.66-2.58.45-.613 1.03-.91 1.79-.91.75 0 1.3.21 1.69.644.21.24.39.6.52 1.076h2.08c-.03-.618-.26-1.24-.686-1.86-.772-1.1-1.994-1.65-3.664-1.65-1.16 0-2.134.36-2.91 1.06l-.05-.11zm23.894 3.636V18.51h-.516c-.035-.597-.3-1.022-.783-1.274-.313-.164-.717-.248-1.193-.248-.54 0-.955.11-1.27.322-.312.215-.478.518-.478.902 0 .355.166.62.477.795.22.105.65.254 1.31.404l1.72.41c.3.06.56.15.8.23l-.05.03z">
-                    </path>
-                  </g>
-                </svg>
-                CSS 3
-              </div>
-
-              <div
-                class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-sm transition-colors ease-in-out">
-                <svg fill="currentColor" class="w-[18px]" viewBox="0 0 24 24" role="img"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                  <g id="SVGRepo_iconCarrier">
-                    <path
-                      d="M20 0H4C1.793.006.006 1.793 0 4v16c0 2.2 1.8 4 4 4h16c2.2 0 4-1.8 4-4V4c0-2.2-1.8-4-4-4zm-2.187 16.855c-.2.482-.517.907-.923 1.234-.42.34-.952.62-1.607.82-.654.203-1.432.305-2.333.305H6.518v-14h6.802c1.258 0 2.266.283 3.02.86.76.58 1.138 1.444 1.138 2.61 0 .705-.172 1.31-.518 1.81-.344.497-.84.886-1.48 1.156v.046c.854.18 1.515.585 1.95 1.215s.658 1.426.658 2.387c0 .538-.104 1.05-.3 1.528l.025.027zm-2.776-3.45c-.41-.375-.986-.558-1.73-.558H8.985v4.368h4.334c.74 0 1.32-.192 1.73-.58.41-.385.62-.934.62-1.64-.007-.69-.21-1.224-.62-1.59h-.017zm-.6-2.823c.396-.336.59-.817.59-1.444 0-.704-.175-1.204-.53-1.49-.352-.285-.86-.433-1.528-.433h-4v3.863h4c.583 0 1.08-.17 1.464-.496z">
-                    </path>
-                  </g>
-                </svg>
-                Bootstrap
               </div>
             </div>
           </div>
