fix: resume button adjustment

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a href="#education" class="w-full">Education</a>
         </li>
       </ul>
-      <div class="mt-5 flex items-center gap-5">
+      <div class="mt-5 flex items-center gap-10 md:gap-5">
         <a href="//github.com/booluw" target="_blank" class="inline text-black hover:text-primary">
           <svg fill="currentColor" class="w-[24px]" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -74,7 +74,7 @@
         <a
           href="https://docs.google.com/document/d/1QwcjFuw6chztKCYIqZjjGfrNDJVNcfEsEfi9V0eySUM/edit?usp=sharing"
           target="_blank"
-          class="flex gap-2 bg-primary text-white hover:bg-black text-sm py-2 px-3 rounded-sm font-[500] transition-colors ease-in-out"
+          class="flex gap-2 bg-primary text-white hover:bg-black text-sm py-2 px-5 md:px-3 rounded-sm font-[500] transition-colors ease-in-out"
         >
           <svg fill="currentColor" class="w-[20px]" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
