--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <title>Vite App</title>
 </head>
 
-<body class="bg-white text-black flex justify-center min-h-screen font-[300]">
+<body
+  class="bg-white text-black flex justify-center min-h-screen font-[300] !scrollbar !scrollbar-track-transparent !scrollbar-thumb-primary">
   <section class="flex flex-col items-start md:flex-row p-5 md:px-0 md:w-[1200px] gap-5">
     <aside class="w-full md:w-1/4 md:order-1 p-5 border border-border rounded md:sticky md:top-2">
       <h2 class="font-[500] text-black text-sm">Navigation</h2>
@@ -60,7 +61,8 @@
                 <g id="email">
                   <path id="vector"
                     d="M17 20.5H7C4 20.5 2 19 2 15.5V8.5C2 5 4 3.5 7 3.5H17C20 3.5 22 5 22 8.5V15.5C22 19 20 20.5 17 20.5Z"
-                    stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round">
+                    stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                    stroke-linejoin="round">
                   </path>
                   <path id="vector_2"
                     d="M18.7698 7.7688L13.2228 12.0551C12.5025 12.6116 11.4973 12.6116 10.777 12.0551L5.22998 7.7688"
@@ -71,11 +73,9 @@
           </svg>
         </a>
 
-        <a
-          href="https://docs.google.com/document/d/1QwcjFuw6chztKCYIqZjjGfrNDJVNcfEsEfi9V0eySUM/edit?usp=sharing"
+        <a href="https://docs.google.com/document/d/1QwcjFuw6chztKCYIqZjjGfrNDJVNcfEsEfi9V0eySUM/edit?usp=sharing"
           target="_blank"
-          class="flex gap-2 bg-primary text-white hover:bg-black text-sm py-2 px-5 md:px-3 rounded-sm font-[500] transition-colors ease-in-out"
-        >
+          class="flex gap-2 bg-primary text-white hover:bg-black text-sm py-2 px-5 md:px-3 rounded-sm font-[500] transition-colors ease-in-out">
           <svg fill="currentColor" class="w-[20px]" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
@@ -107,7 +107,8 @@
 
       <div class="mt-10 relative">
         <h2 class="font-[500] text-black text-sm">Projects</h2>
-        <div class="w-full flex flex-col md:flex-row overflow-y-hidden overflow-x-auto gap-5 py-5 md:pr-14 relative">
+        <div
+          class="w-full flex flex-col md:flex-row overflow-y-hidden overflow-x-auto gap-5 py-5 md:pr-14 !scrollbar !scrollbar-track-border/[.02] !scrollbar-thumb-border">
           <div
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default flex flex-col items-start justify-between">
             <div>
@@ -126,7 +127,7 @@
               orunla.ng
             </a>
           </div>
-          
+
           <div
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default flex flex-col items-start justify-between">
             <div>
@@ -134,7 +135,8 @@
                 class="w-full h-auto rounded grayscale group-hover:grayscale-0 transition-all ease-in-out" />
               <div class="mt-3">
                 <h3 class="font-[500]">Fufumaps</h3>
-                <p class="text-sm mt-1 mb-2 md:line-clamp-3">The ultimate app for African food enthusiasts, travelers, and cultural
+                <p class="text-sm mt-1 mb-2 md:line-clamp-3">The ultimate app for African food enthusiasts, travelers,
+                  and cultural
                   explorers.
                 </p>
               </div>
@@ -181,7 +183,9 @@
             </a>
           </div>
         </div>
-        <div class="hidden md:block absolute top-10 right-0 px-10 py-[155px] bg-gradient-to-l from-white to-transparent"></div>
+        <div
+          class="hidden md:block absolute top-10 right-0 px-10 py-[155px] bg-gradient-to-l from-white to-transparent">
+        </div>
       </div>
 
       <div class="mt-10">
