feat: theme switcher

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./style.css" />
   <title>Vite App</title>
 </head>
 
@@ -18,10 +19,10 @@
           <a href="#about-me" class="w-full">About Me</a>
         </li>
         <li class="flex mb-2 py-2 border-b border-border hover:border-primary hover:font-[400]">
-          <a href="#experience" class="w-full">Experience</a>
+          <a href="#projects" class="w-full">Projects</a>
         </li>
         <li class="flex mb-2 py-2 border-b border-border hover:border-primary hover:font-[400]">
-          <a href="#projects" class="w-full">Projects</a>
+          <a href="#experience" class="w-full">Experience</a>
         </li>
         <li class="flex mb-2 py-2 border-b border-border hover:border-primary hover:font-[400]">
           <a href="#education" class="w-full">Education</a>
@@ -90,8 +91,14 @@
       </div>
     </aside>
     <main class="md:w-3/4">
-      <header class="text-xl md:text-4xl p-5 font-[200] border border-border rounded sticky top-2 bg-white z-10">
+      <header class="text-xl md:text-4xl p-5 font-[200] border border-border rounded sticky top-2 bg-white z-10 flex items-center justify-between">
         Boluwatife Johnson
+        <div class="flex gap-3">
+          <div class="p-3 md:p-2 rounded-full bg-[#0076B6] cursor-pointer" data-theme="primary"></div>
+          <div class="p-3 md:p-2 rounded-full bg-[#AAAABE] cursor-pointer" data-theme="dark"></div>
+          <div class="p-3 md:p-2 rounded-full bg-[#B2FFA9] cursor-pointer" data-theme="space"></div>
+          <div class="p-3 md:p-2 rounded-full bg-[#65532F] cursor-pointer" data-theme="reading"></div>
+        </div>
       </header>
 
       <div class="mt-5">
