feat: theme switcher active state

--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
     <main class="md:w-3/4">
       <header class="text-xl md:text-4xl p-5 font-[200] border border-border rounded sticky top-2 bg-white z-10 flex items-center justify-between">
         Boluwatife Johnson
-        <div class="flex gap-3">
-          <div class="p-3 md:p-2 rounded-full bg-[#0076B6] cursor-pointer" data-theme="primary"></div>
-          <div class="p-3 md:p-2 rounded-full bg-[#AAAABE] cursor-pointer" data-theme="dark"></div>
-          <div class="p-3 md:p-2 rounded-full bg-[#B2FFA9] cursor-pointer" data-theme="space"></div>
-          <div class="p-3 md:p-2 rounded-full bg-[#65532F] cursor-pointer" data-theme="reading"></div>
+        <div class="flex gap-2">
+          <div class="p-2 rounded-full bg-[#0076B6] cursor-pointer scale-90 transition-transform ease-in-out" data-theme="primary"></div>
+          <div class="p-2 rounded-full bg-[#65532F] cursor-pointer scale-90 transition-transform ease-in-out" data-theme="reading"></div>
+          <div class="p-2 rounded-full bg-[#F58549] cursor-pointer scale-90 transition-transform ease-in-out" data-theme="space"></div>
+          <div class="p-2 rounded-full bg-[#AAAABE] cursor-pointer scale-90 transition-transform ease-in-out" data-theme="dark"></div>
         </div>
       </header>
 
-      <div class="mt-5">
+      <div class="mt-5 pb-2 border-b border-border">
         <h2 class="font-[500] text-black text-sm">About Me</h2>
         <p class="mt-2">
           Highly skilled Software Engineer with 5+ years of experience building and maintaining robust software systems.
