feat: target anchoring and UI polishing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body
-  class="bg-white text-black flex justify-center min-h-screen font-[300] !scrollbar !scrollbar-track-transparent !scrollbar-thumb-primary">
+  class="bg-white text-black flex justify-center min-h-screen font-[300] !scrollbar !scrollbar-track-transparent !scrollbar-thumb-primary"
+>
   <section class="flex flex-col items-start md:flex-row p-5 md:px-0 md:w-[1200px] gap-5">
     <aside class="w-full md:w-1/4 md:order-1 p-5 border border-border rounded md:sticky md:top-2">
       <h2 class="font-[500] text-black text-sm">Navigation</h2>
@@ -91,7 +92,7 @@
       </div>
     </aside>
     <main class="md:w-3/4">
-      <header class="text-xl md:text-4xl p-5 font-[200] border border-border rounded sticky top-2 bg-white z-10 flex items-center justify-between">
+      <header class="text-xl md:text-4xl py-5 font-[200] border-b border-border sticky top-0 bg-white z-10 flex items-center justify-between">
         Boluwatife Johnson
         <div class="flex gap-2">
           <div class="p-2 rounded-full bg-[#0076B6] cursor-pointer scale-90 transition-transform ease-in-out" data-theme="primary"></div>
@@ -101,6 +102,7 @@
         </div>
       </header>
 
+      <a name="about-me" id="about-me" />
       <div class="mt-5 pb-2 border-b border-border">
         <h2 class="font-[500] text-black text-sm">About Me</h2>
         <p class="mt-2">
@@ -112,6 +114,7 @@
         </p>
       </div>
 
+      <a name="projects" id="projects" />
       <div class="mt-10 relative">
         <h2 class="font-[500] text-black text-sm">Projects</h2>
         <div
@@ -195,6 +198,7 @@
         </div>
       </div>
 
+      <a name="experience" id="experience" />
       <div class="mt-10">
         <h2 class="font-[500] text-black text-sm">Experience</h2>
         <div class="flex flex-col gap-3">
