feat: easter egg 1.0

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
     </aside>
     <main class="md:w-3/4">
       <header class="text-xl md:text-4xl py-5 font-[200] border-b border-border sticky top-0 bg-white z-10 flex items-center justify-between">
-        Boluwatife Johnson
+        <h1 class="" data-easter="dbl">
+          Boluwatife Johnson
+        </h1>
         <div class="flex gap-2">
           <div class="p-2 rounded-full bg-[#0076B6] cursor-pointer scale-90 transition-transform ease-in-out" data-theme="primary"></div>
           <div class="p-2 rounded-full bg-[#65532F] cursor-pointer scale-90 transition-transform ease-in-out" data-theme="reading"></div>
