--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
   <div class="fixed top-0 right-0 left-0 -z-[5] flex items-center justify-center">
     <section class="md:w-[1200px] p-5" data-nosnippet>
-      <h1 class="text-2xl font-[400] mb-3">You've found the source code easter egg</h1>
+      <h1 class="text-2xl font-[400] mb-3 text-black">You've found the source code easter egg</h1>
       &lt;section class=&quot;flex flex-col items-start md:flex-row p-5 md:px-0 md:w-[1200px] gap-5&quot;&gt;
       &lt;aside class=&quot;w-full md:w-1/4 md:order-1 p-5 border border-border rounded md:sticky md:top-2&quot;&gt;
       &lt;h2 class=&quot;font-[500] text-black text-sm&quot;&gt;Navigation&lt;/h2&gt;
