feat: updated about me

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <main class="md:w-3/4">
       <header
         class="text-xl md:text-4xl py-5 font-[200] border-b border-border sticky top-0 bg-white z-10 flex items-center justify-between">
-        <h1 class="cursor-default select-none" data-easter="dbl">
+        <h1 class="cursor-default select-none" data-easter="dbl" title="Double Click to see inside">
           Boluwatife Johnson
         </h1>
         <div class="flex gap-2">
@@ -112,11 +112,19 @@
       <div class="mt-5 pb-2 border-b border-border">
         <h2 class="font-[500] text-black text-sm">About Me</h2>
         <p class="mt-2">
-          Highly skilled Software Engineer with 5+ years of experience building and maintaining robust software systems.
-          Adept in
-          various programming languages and frameworks, with a strong understanding of software development lifecycle
-          (SDLC).
-          Possesses a passion for creating efficient and scalable solutions.
+          <span class="opacity-80">
+            Building products, pushing the browser to the limit and learning exciting technologies are 3 terms that describe my journey into tech.
+          </span>
+          <span class="opacity-100 font-[400]">
+            As a Computer Science graduate, I thrive to make softwares that are built for the web, user enjoyable and scalable to extend how humans use computers.
+          </span>
+          <span class="opacity-80">
+            I believe there's no limit to how the browser can go, we haven't just pushed it there yet.
+          </span>
+          <span class="opacity-100 font-[400]">
+            Aside coding, I also love to build businesses as I am doing on the side with
+            <a href="//orunla.ng" target="_blank" class="text-primary font-[500] underline" title="Orunla Africa">orunla.ng</a>.
+          </span>
         </p>
       </div>
 
@@ -394,8 +402,8 @@
   </section>
 
   <div class="fixed top-0 right-0 left-0 -z-[5] flex items-center justify-center">
-    <section class="p-5 md:w-[1160px]" data-nosnippet>
-      <h1 class="text-2xl font-[400] mb-3 text-black">You've found the source code easter egg</h1>
+    <section class="p-5 md:w-[1160px] text-justify" data-nosnippet>
+      <h1 class="text-2xl font-[400] mb-3 text-black ">You've found the source code easter egg</h1>
       &lt;section class=&quot;flex flex-col items-start md:flex-row p-5 md:px-0 md:w-[1200px] gap-5&quot;&gt;
       &lt;aside class=&quot;w-full md:w-1/4 md:order-1 p-5 border border-border rounded md:sticky md:top-2&quot;&gt;
       &lt;h2 class=&quot;font-[500] text-black text-sm&quot;&gt;Navigation&lt;/h2&gt;
