feat: education section

--- a/index.html
+++ b/index.html
@@ -113,23 +113,26 @@
         <h2 class="font-[500] text-black text-sm">About Me</h2>
         <p class="mt-2">
           <span class="opacity-80">
-            Building products, pushing the browser to the limit and learning exciting technologies are 3 terms that describe my journey into tech.
+            Building products, pushing the browser to the limit and learning exciting technologies are 3 terms that
+            describe my journey into tech.
           </span>
           <span class="opacity-100 font-[400]">
-            As a Computer Science graduate, I thrive to make softwares that are built for the web, user enjoyable and scalable to extend how humans use computers.
+            As a Computer Science graduate, I thrive to make softwares that are built for the web, user enjoyable and
+            scalable to extend how humans use computers.
           </span>
           <span class="opacity-80">
             I believe there's no limit to how the browser can go, we haven't just pushed it there yet.
           </span>
           <span class="opacity-100 font-[400]">
             Aside coding, I also love to build businesses as I am doing on the side with
-            <a href="//orunla.ng" target="_blank" class="text-primary font-[500] underline" title="Orunla Africa">orunla.ng</a>.
+            <a href="//orunla.ng" target="_blank" class="text-primary font-[500] underline"
+              title="Orunla Africa">orunla.ng</a>.
           </span>
         </p>
       </div>
 
       <a name="projects" id="projects" />
-      <div class="mt-10 relative">
+      <div class="mt-20 relative">
         <h2 class="font-[500] text-black text-sm">Projects</h2>
         <div
           class="w-full flex flex-col md:flex-row overflow-y-hidden overflow-x-auto gap-5 py-5 md:pr-14 !scrollbar !scrollbar-track-border/[.02] !scrollbar-thumb-border">
@@ -213,7 +216,7 @@
       </div>
 
       <a name="experience" id="experience" />
-      <div class="mt-10">
+      <div class="mt-20">
         <h2 class="font-[500] text-black text-sm">Experience</h2>
         <div class="flex flex-col gap-3">
           <div class="border-b border-border py-2">
@@ -394,6 +397,43 @@
                 PWA
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+
+      <a name="education" id="education" />
+      <div class="mt-20">
+        <h2 class="font-[500] text-black text-sm">Education</h2>
+
+        <div class="flex flex-col gap-3">
+          <div class="border-b border-border py-3">
+            <div>
+              <h3 class="font-[500]">Federal University of Technology, Minna</h3>
+              <div class="text-sm flex gap-3">
+                <h4 class="border-r border-border pr-3">
+                  BTech. Computer Science
+                </h4>
+                <h4 class="">
+                  January, 2016 - May, 2023
+                </h4>
+              </div>
+            </div>
+          </div>
+          <div class="border-b border-border py-2">
+            <div>
+              <h3 class="font-[500]">Udemy</h3>
+              <div class="text-sm flex gap-3">
+                <h4 class="border-r border-border pr-3">
+                  Lifelong learner
+                </h4>
+                <h4 class="">
+                  Forever
+                </h4>
+              </div>
+            </div>
+            <p class="my-3 text-sm md:w-2/3 opacity-75">
+              Always on the lookout for the latest and best course to explain latest technlologies and topics of intrest.
+            </p>
           </div>
         </div>
       </div>
