--- a/index.html
+++ b/index.html
@@ -91,14 +91,15 @@
           </a>
         </div>
       </div>
-      <div class="p-5 border border-border rounded">
+      <div class="p-5 border border-border rounded bg-border">
         <h2 class="font-[500] text-black text-sm">Newsletter</h2>
         <p class="text-sm leading-snug my-3">
           I write weekly on my newsletter; <span class="font-[400]">Frontend Uncensored</span>, where I share my latest
           findings and how we can push the browser together to new limits.
         </p>
 
-        <a href="//booluw.substack.com" target="_blank" class="inline-flex items-center gap-2 py-2 px-4 rounded-sm text-sm text-primary border border-primary hover:text-white hover:bg-primary">
+        <a href="//booluw.substack.com" target="_blank"
+          class="inline-flex items-center gap-2 py-2 px-4 rounded-sm text-sm text-primary border border-primary hover:text-white hover:bg-primary">
           <svg class="w-[24px]" viewBox="0 0 48 48" id="a" xmlns="http://www.w3.org/2000/svg" fill="#000000">
             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
@@ -168,7 +169,7 @@
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default flex flex-col items-start justify-between">
             <div>
               <img src="./public/orunla-page-screenshot.png"
-                class="w-full h-auto rounded grayscale group-hover:grayscale-0 transition-all ease-in-out" />
+                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
               <div class="mt-3">
                 <h3 class="font-[500]">Orunla</h3>
                 <p class="text-sm mt-1 mb-2 md:line-clamp-3">
@@ -187,7 +188,7 @@
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default flex flex-col items-start justify-between">
             <div>
               <img src="./public/fufumaps-page-screenshot.png"
-                class="w-full h-auto rounded grayscale group-hover:grayscale-0 transition-all ease-in-out" />
+                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
               <div class="mt-3">
                 <h3 class="font-[500]">Fufumaps</h3>
                 <p class="text-sm mt-1 mb-2 md:line-clamp-3">The ultimate app for African food enthusiasts, travelers,
@@ -206,7 +207,7 @@
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default  flex flex-col items-start justify-between">
             <div>
               <img src="./public/photosplash-page-screenshot.png"
-                class="w-full h-auto rounded grayscale group-hover:grayscale-0 transition-all ease-in-out" />
+                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
               <div class="mt-3">
                 <h3 class="font-[500]">Photosplash</h3>
                 <p class="text-sm mt-1 mb-2 md:line-clamp-3">
@@ -224,7 +225,7 @@
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default  flex flex-col items-start justify-between">
             <div>
               <img src="./public/spottang-page-screenshot.png"
-                class="w-full h-auto rounded grayscale group-hover:grayscale-0 transition-all ease-in-out" />
+                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
               <div class="mt-3">
                 <h3 class="font-[500]">Spotta NG</h3>
                 <p class="text-sm mt-1 mb-2 md:line-clamp-3">
@@ -446,7 +447,18 @@
                 </h4>
               </div>
             </div>
+            <p class="my-3 text-sm md:w-2/3 font-[400]">
+              <span class="font-[300] opacity-75">
+                Graduated magna cum laude, having mentored over 10 colleagues in web development, being the
+              </span> president of my department
+              <span class="font-[300] opacity-75">student association and awarded the</span>
+              VC award for Excellence
+              <span class="font-[300] opacity-75">
+                , won the NACOS North-Zonal pitching competition 2020 in Abuja, Nigeria.
+              </span>
+            </p>
           </div>
+
           <div class="border-b border-border py-2">
             <div>
               <h3 class="font-[500]">Udemy</h3>
@@ -627,7 +639,7 @@
       items-start justify-between&quot;&gt;
       &lt;div&gt;
       &lt;img src=&quot;./public/orunla-page-screenshot.png&quot;
-      class=&quot;w-full h-auto rounded grayscale group-hover:grayscale-0 transition-all ease-in-out&quot; /&gt;
+      class=&quot;w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out&quot; /&gt;
       &lt;div class=&quot;mt-3&quot;&gt;
       &lt;h3 class=&quot;font-[500]&quot;&gt;Orunla&lt;/h3&gt;
       &lt;p class=&quot;text-sm mt-1 mb-2 md:line-clamp-3&quot;&gt;
@@ -648,7 +660,7 @@
       items-start justify-between&quot;&gt;
       &lt;div&gt;
       &lt;img src=&quot;./public/fufumaps-page-screenshot.png&quot;
-      class=&quot;w-full h-auto rounded grayscale group-hover:grayscale-0 transition-all ease-in-out&quot; /&gt;
+      class=&quot;w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out&quot; /&gt;
       &lt;div class=&quot;mt-3&quot;&gt;
       &lt;h3 class=&quot;font-[500]&quot;&gt;Fufumaps&lt;/h3&gt;
       &lt;p class=&quot;text-sm mt-1 mb-2 md:line-clamp-3&quot;&gt;The ultimate app for African food enthusiasts,
@@ -670,7 +682,7 @@
       items-start justify-between&quot;&gt;
       &lt;div&gt;
       &lt;img src=&quot;./public/photosplash-page-screenshot.png&quot;
-      class=&quot;w-full h-auto rounded grayscale group-hover:grayscale-0 transition-all ease-in-out&quot; /&gt;
+      class=&quot;w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out&quot; /&gt;
       &lt;div class=&quot;mt-3&quot;&gt;
       &lt;h3 class=&quot;font-[500]&quot;&gt;Photosplash&lt;/h3&gt;
       &lt;p class=&quot;text-sm mt-1 mb-2 md:line-clamp-3&quot;&gt;
@@ -690,7 +702,7 @@
       items-start justify-between&quot;&gt;
       &lt;div&gt;
       &lt;img src=&quot;./public/spottang-page-screenshot.png&quot;
-      class=&quot;w-full h-auto rounded grayscale group-hover:grayscale-0 transition-all ease-in-out&quot; /&gt;
+      class=&quot;w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out&quot; /&gt;
       &lt;div class=&quot;mt-3&quot;&gt;
       &lt;h3 class=&quot;font-[500]&quot;&gt;Spotta NG&lt;/h3&gt;
       &lt;p class=&quot;text-sm mt-1 mb-2 md:line-clamp-3&quot;&gt;
