fix: typographical errors

--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
               </h4>
             </div>
             <p class="my-3 text-sm md:w-2/3 opacity-75">
-              Developed and design the entire fullstack architechture which handles pdf-to-text conversion, PWA
-              experience with push notifications, and API documentations. Architectured a fully offline enabled reader
+              Developed and designed the entire fullstack architecture which handles pdf-to-text conversion, PWA
+              experience with push notifications, and API documentations. Architected a fully offline enabled reader
               on the browser, using indexedDB, and background sync.
             </p>
             <div class="flex flex-wrap gap-2">
@@ -360,11 +360,11 @@
                 <h4 class="">Fulltime</h4>
               </div>
               <h4 class="text-sm opacity-85">
-                Febuary, 2022 - June, 2023
+                February, 2022 - June, 2023
               </h4>
             </div>
             <p class="my-3 text-sm md:w-2/3 opacity-75">
-              Implemented GraphQL subscription on the agent CRM, championed the adoptation of PWA for customer
+              Implemented GraphQL subscription on the agent CRM, championed the adoption of PWA for customer
               self-service 2.0, and implemented a dynamic analytic dashboard for partner's portal.
             </p>
             <div class="flex flex-wrap gap-2 mt-3">
@@ -472,8 +472,8 @@
               </div>
             </div>
             <p class="my-3 text-sm md:w-2/3 opacity-75">
-              Always on the lookout for the latest and best course to explain latest technlologies and topics of
-              intrest.
+              Always on the lookout for the latest and best course to explain latest technologies and topics of
+              interest.
             </p>
           </div>
         </div>
